--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://RokuX9.github.io/around-react"
+  "homepage": "https://RokuX9.github.io/"
 }
